--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,21 +21,40 @@ jobs:
         with:
           go-version: '^1.23.2'
 
-      - name: Build Windows binary
+      - name: Build WS Windows binary
         shell: pwsh
         run: |
           cd ./cmd/SimpleWebsocketForBinary
           $env:GOOS = "windows"
           $env:GOARCH = "amd64"
-          go build -o CS2_GameStateIntegration.exe
+          go build -o CS2_GameStateIntegration-WSInterface.exe
 
-      - name: Upload binary to release
+      - name: Upload WS binary to release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./cmd/SimpleWebsocketForBinary/CS2_GameStateIntegration.exe
-          name: CS2_GameStateIntegration.exe
+          files: ./cmd/SimpleWebsocketForBinary/CS2_GameStateIntegration-WSInterface.exe
+          name: CS2_GameStateIntegration-WSInterface.exe
           tag_name: ${{ github.ref }}
           body: |
-            ## CS2_GameStateIntegration.exe Release
+            ## CS2_GameStateIntegration-WSInterface.exe Release
+
+            Built from tag ${{ github.ref }}
+
+      - name: Build BombTimer Windows binary
+        shell: pwsh
+        run: |
+          cd ./cmd/BombTimer
+          $env:GOOS = "windows"
+          $env:GOARCH = "amd64"
+          go build -o CS2_GameStateIntegration-BombTimer.exe
+
+      - name: Upload BombTimer binary to release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./cmd/BombTimer/CS2_GameStateIntegration-BombTimer.exe
+          name: CS2_GameStateIntegration-BombTimer.exe
+          tag_name: ${{ github.ref }}
+          body: |
+            ## CS2_GameStateIntegration-BombTimer.exe Release
 
             Built from tag ${{ github.ref }}
